--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "fullstack-apollo-react-boilerplate-project",
-  "version": "0.1.0",
-  "author": "Robin Wieruch <hello@rwieruch.com> (https://www.robinwieruch.de)",
+  "name": "apollo-react",
+  "version": "1.0.0",
   "dependencies": {
+    "@apollo/react-common": "^3.1.4",
+    "@apollo/react-components": "^3.1.5",
+    "@apollo/react-hooks": "^3.1.5",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
-    "apollo-link-ws": "^1.0.20",
-    "apollo-utilities": "^1.3.4",
-    "graphql": "^14.6.0",
+    "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "history": "^4.10.1",
     "react": "^16.13.1",
-    "react-apollo": "^2.5.8",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "3.1.0",
-    "subscriptions-transport-ws": "^0.9.16"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
